k8s/producao/api.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: appname-api
  namespace: appname
  labels:
    app: appname-api
    env: producao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appname-api
      env: producao
  template:
    metadata:
      labels:
        app: appname-api
        env: producao
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "1234"
    spec:
      containers:
      - name: appname-api-container
        image: registry.trt8.jus.br/desenvolvimento/appname/appname-api:<IMAGE_VERSION>
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: appname-api-service
  namespace: appname
  labels:
    app: appname-api
    env: producao
spec:
  selector:
     app: appname-api
     env: producao
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
