k8s/producao/ui.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: appname-ui
  namespace: appname
  labels:
    app: appname-ui
    env: producao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appname-ui
      env: producao
  template:
    metadata:
      labels:
        app: appname-ui
        env: producao
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "1234"
    spec:
      containers:
      - name: appname-ui-container
        image: registry.trt8.jus.br/desenvolvimento/appname/appname-ui:<IMAGE_VERSION>
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: appname-ui-service
  namespace: appname
  labels:
    app: appname-ui
    env: producao
spec:
  selector:
     app: appname-ui
     env: producao
  ports:
    - name: http
      port: 80
